folder icons for summaries

--- a/static/css/card.css
+++ b/static/css/card.css
@@ -17,3 +17,17 @@ main {
     height: 50px;
     margin-right: 10px;
 }
+
+details > summary {
+    background: url(../img/folder-closed-25x25.png) no-repeat;
+    list-style-image: url(../img/folder-closed-25x25.png) no-repeat;
+    display: block;
+    padding-left: 25px;
+}
+
+details[open] > summary {
+    background: url(../img/folder-open-25x25.png) no-repeat;
+    list-style-image: url(../img/folder-open-25x25.png) no-repeat;
+    display: block;
+    padding-left: 25px;
+}
