--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,8 @@
-body {
+html, body {
     font-family: 'defaultFont', monospace;
+    height: 100%;
+
+    background: linear-gradient(to bottom right, rgba(193,63,208,1), rgba(59,60,255,1));
 }
 
 /* navi bar */
